= Package NNbenchmark =
- Akshaj Verma, Salabila Mahdi, Patrice Kiener
- Christophe Dutang, John Nash 



NNbenchmark 3.0.1 - 2020-06-27
==============================
- DESCRIPTION: Roxygen: list(old_usage = TRUE)
- timestart(), timediff(dgts = 2)


NNbenchmark 3.0.0 - 2020-06-21 (Bila + Patrice)
===============================================
- NNTrain_Predict.R for NEW 2020 code do.call() implementation to train and predict NNs
- Move NNbenchmark2020 to top directory. This is new NNbenchmark
- Move NNbenchmark2019 to a new directory
- Fix the date in DESCRIPTION

NNbenchmark 2.3.7 - 2020-06-19 (Bila)
=====================================
- Added MSE and WAE to funRMSE.R
- Made a new R file: NNSummary.R for 2020 summary function

NNbenchmark 2.3.6 - 2020-01-11
==============================
- ht() and ht9() fully rewritten. Accept now array and data.frame with matrices inside
- README.md added

NNbenchmark 2.3.5 - 2019-08-22
==============================
- DESCRIPTION and a_intro.R: add the html links to GitHub and AkshajVerma.com

NNbenchmark 2.3.4 - 2019-08-21 - sent to CRAN
=============================================
- DESCRIPTION: Modify the title to match title case (recommanded by CRAN)

NNbenchmark 2.3.3 - 2019-08-21
==============================
- DESCRIPTION: Modify the title 
- All files: Add value to Rd files (return in roxygen comments) for every functions

NNbenchmark 2.3.2 - 2019-08-20
==============================
- prepareZZ: extend donttest to run examples in less than 5 seconds

NNbenchmark 2.3.1 - 2019-08-20
==============================
- add2csv: examples rewritten with tempfile()
- datalist rewritten with format (file_without_ext: obj1, ..., objn)
- use for this purpose the hidden function tools:::list_data_in_pkg()

NNbenchmark 2.3 - 2019-08-19
============================
- NNdatasets: Change uNeuroOne from 3 to 2 neurons and 10 to 7 parameters
- NNdatasets: mRef153: correct a typo in the number of neurons (from 4 to 3)