@@ -1,7 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
-export(NNSummary)
 export(NNdataSummary)
+export(NNsummary)
 export(add2csv)
 export(cc)
 export(clearNN)
@@ -20,8 +20,8 @@ export(prepareZZ)
 export(timeR)
 export(timediff)
 export(timestart)
-export(train_predict_1data)
-export(train_predict_1mth_1data)
+export(trainPredict_1data)
+export(trainPredict_1mth1data)
 import(R6)
 import(graphics)
 import(utils)
