@@ -1,22 +1,22 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/NNSummary.R
-\name{NNSummary}
-\alias{NNSummary}
+% Please edit documentation in R/NNsummary.R
+\name{NNsummary}
+\alias{NNsummary}
 \title{Summarize Calculations of RMSE, MSE, MAE, and WAE}
 \usage{
-NNSummary(y_pred, y0, dgts = 4, time)
+NNsummary(y_pred, y0, time, dgts = 4)
 }
 \arguments{
 \item{y_pred}{numeric vector of the predicted values}
 
 \item{y0}{numeric vector of the observed values}
 
-\item{dgts}{integer value for how many digits to round to}
-
 \item{time}{numeric value of time}
+
+\item{dgts}{integer value for how many digits to round to for measures of fit}
 }
 \value{
-A vector of RMSE, MSE, MAE, WAE, and time values for a single training.
+A vector of RMSE, MSE, MAE, WAE, and time values for a single iteration.
 }
 \description{
 Summarize measures of fit and time for a single training. Measures of fit 
@@ -24,9 +24,10 @@ include the Root Mean Squared Error (RMSE), the Mean Squared Error (MSE),
 the Mean Absolute Error (MAE), and the Worst Absolute Error (WAE) rounded
 by default to 4 digits and set to \code{na.rm = TRUE}. See more at \code{\link{funRMSE}}. 
 The summary can also include the results of time from \code{\link{getTimer}} in
-NNbenchmark or results of time from other functions/packages
+NNbenchmark or the result of \code{\link{timediff}}.
 }
 \examples{
+#with legacy code, no longer usable with 2020 trainPredict
 options("digits.secs" = 4)
 timeTT <- createTimer()
 
@@ -37,6 +38,14 @@ timeTT$stop("event")
 
 time <- getTimer(timeTT)
 
-NNSummary(y_pred, y0, 4, time[,4])
+NNsummary(y_pred, y0, time[,4], 4)
 
+#with 2020 code
+timestart()
+y0 <- 1:19
+y_pred <- y0 + rnorm(length(y0), sd = 0.3)
+time <- timediff()
+
+NNsummary(y_pred, y0, time, 4)
+  
 }
